--- a/manchester_traffic_offences/assets-src/stylesheets/_templates_overrides.scss
+++ b/manchester_traffic_offences/assets-src/stylesheets/_templates_overrides.scss
@@ -23,14 +23,22 @@ GOV.UK Toolkit/Template overrides
 }
 
 #content {
-	@include ie(6) {
+	@include ie-lte(8) {
 		width: 960px;
 	}
 }
 
-.footer-wrapper > p {
+.footer-wrapper p.footer-top {
 	@extend %site-width-container;
 	@include core-16;
-	margin-bottom: 0;
-	margin-top: 0;
+	margin-bottom: 1em;
+
+	@include media(tablet) {
+		margin-bottom: 0;
+	}
+
+	@include ie-lte(7) {
+		width: 960px;
+		margin-left: 30px;
+	}
 }
